--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/mahassan/news-homepage-main/issues"
   },
-  "homepage": "https://github.com/mahassan/news-homepage-main#readme"
+  "homepage": "https://github.com/mahassan/news-homepage-main#readme",
+  "devDependencies": {
+    "webpack": "^5.76.1",
+    "webpack-cli": "^5.0.1"
+  }
 }
